<resources>
    <string name="app_name">FinanceDashboard</string>
    <string name="read_qrcode">Read Qrcode</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposite">Deposite</string>
    <string name="sectors">Sectors</string>
    <string name="home">home</string>
    <string name="card">Card</string>
    <string name="crypto_activities">Crypto activities</string>
    <string name="view_all">View All</string>
    <string name="stock_futures">Stock Futures</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="see_all">See all</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
</resources>